# psh

./: Cargo.toml  Makefile  README.md  ansi-colors.sh  test.sh
.github/data/: project-dictionary.txt
.github/workflows/: check.yml
posh/: Cargo.toml  README.md
posh-core/: Cargo.toml  README.md
posh-core/src/: error.rs  lib.rs  path.rs
posh-core/src/engine/: expand.rs  history.rs  mod.rs
posh/src/: args.rs  config.rs  main.rs
posh/src/repl/: input.rs  mod.rs
posh/src/repl/input/: mod.rs  syntax_highlighting.rs
psh/: Cargo.toml  README.md
psh-core/: Cargo.toml  README.md
psh-core/src/: error.rs  lib.rs  path.rs
psh-core/src/engine/: expand.rs  history.rs  mod.rs  util.rs
psh-core/src/engine/builtin/: abbr.rs  alias.rs  ast.rs  builtins.rs  cd.rs  colon.rs  dot.rs  exit.rs  mod.rs  unabbr.rs  unalias.rs
psh-core/src/engine/parser/: mod.rs  semtok.rs  tok.rs
psh-core/src/engine/parser/ast/: mod.rs  prelude.rs  reconstruct.rs  serialize.rs  tests.rs
psh-core/src/parser/: mod.rs  tok.rs
psh-core/src/parser/ast/: mod.rs  nodes.rs  reconstruct.rs  serialize.rs  tests.rs
psh-core/src/parser/v2/: mod.rs  tok.rs
psh/src/: args.rs  color.rs  config.rs  main.rs
psh/src/repl/: mod.rs
psh/src/repl/input/: mod.rs  syntax_highlighting.rs
src/: args.rs  builtin.rs  config.rs  engine.rs  error.rs  history.rs  input.rs  main.rs  path.rs  repl.rs
src/engine/: builtin.rs  history.rs  mod.rs  parser.rs
src/engine/parser/: ast.rs  lexer.rs  mod.rs  util.rs
src/repl/: input.rs  mod.rs
test/: 001_quotes  002_pipeline  003_and_or_list  004_expand_tilde  005_redirection  006_multiline  007_variables  008_empty_words  009_exit_code_expansion
test/res/: echfoo  errcho  rc
(+24 files in other folders)
