[package]
name = "posh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
posh-core = { path = "../posh-core/" }
clap = { version = "4.0.19", features = ["derive"] }
crossterm = { version = "0.25.0", features = ["bracketed-paste"] }
