[package]
name = "psh-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.103", optional = true }
nix = "0.26.2"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
