[package]
name = "psh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psh-core = { path = "../psh-core/" }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.25.0", features = ["bracketed-paste"] }
ctrlc = "3.2.5"
serde_json = { version = "1.0", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde_json", "psh-core/serde"]
